--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -39,7 +39,7 @@
       <div class="menu">
         <nav class="nav-list">
           <a href="../templates/index.html">Home</a>
-          <a href="projects.html"> projetos Academicos</a>
+          <a href="/projects.html"> projetos Academicos</a>
           <a href="../templates/projectPessoal.html">Projetos Pessoais</a>
           <a href ="../templates/sobremim.html">Sobre</a>
           <a href="../templates/linguagens.html">linguagens</a>
